--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Paoletti  Nicola",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parse": "^0.1.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.6",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.13"
   }
