--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.6",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "router": "^1.3.5"
   }
 }
