données de connexion sècurisée et modif post

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 
-TOKEN =ewsrxdfcghgjbhkjnlfghjgv/.tl/kmlumlnbhgcxd ; 
+TOKEN =ewsrxdfcghgjbhkjnlfghjgv/.tl/kmlumlnbhgcxd 
+DB_ID = root
+DB_PW = IlmioaccountMySQL!!97
+DB_N= groupmania_db
